--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -7,23 +7,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: bs4 in c:\\users\\georg\\anaconda3\\lib\\site-packages (0.0.1)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\georg\\anaconda3\\lib\\site-packages (from bs4) (4.9.3)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\georg\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4) (2.2.1)\n",
-      "Requirement already satisfied: requests in c:\\users\\georg\\anaconda3\\lib\\site-packages (2.25.1)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\georg\\anaconda3\\lib\\site-packages (from requests) (4.0.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\georg\\anaconda3\\lib\\site-packages (from requests) (2020.12.5)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\georg\\anaconda3\\lib\\site-packages (from requests) (1.26.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\georg\\anaconda3\\lib\\site-packages (from requests) (2.10)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n!pip install bs4\\n!pip install requests\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
     "!pip install bs4\n",
-    "!pip install requests"
+    "!pip install requests\n",
+    "'''"
    ]
   },
   {
@@ -72,7 +70,7 @@
     "    date = article.find('time').text\n",
     "    summary = article.div.p.text\n",
     "    try:\n",
-    "        youtube_url = article.find('iframe')['src']\n",
+    "        youtube_url = article.find('iframe')['src'].split('?')[0]\n",
     "    except:\n",
     "        youtube_url = None\n",
     "    \n",
@@ -118,28 +116,28 @@
        "      <td>Python Tutorial: Zip Files – Creating and Extracting Zip Archives</td>\n",
        "      <td>November 19, 2019</td>\n",
        "      <td>In this video, we will be learning how to create and extract zip archives. We will start by using the zipfile module, and then we will see how to do this using the shutil module. We will learn how to do this with single files and directories, as well as learning how to use gzip as well. Let’s get started…</td>\n",
-       "      <td>https://www.youtube.com/embed/z0gguhEmWiY?version=3&amp;rel=1&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;fs=1&amp;hl=en-US&amp;autohide=2&amp;wmode=transparent</td>\n",
+       "      <td>https://www.youtube.com/embed/z0gguhEmWiY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Python Data Science Tutorial: Analyzing the 2019 Stack Overflow Developer Survey</td>\n",
        "      <td>October 17, 2019</td>\n",
        "      <td>In this Python Programming video, we will be learning how to download and analyze real-world data from the 2019 Stack Overflow Developer Survey. This is terrific practice for anyone getting into the data science field. We will learn different ways to analyze this data and also some best practices. Let’s get started…</td>\n",
-       "      <td>https://www.youtube.com/embed/_P7X8tMplsw?version=3&amp;rel=1&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;fs=1&amp;hl=en-US&amp;autohide=2&amp;wmode=transparent</td>\n",
+       "      <td>https://www.youtube.com/embed/_P7X8tMplsw</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Python Multiprocessing Tutorial: Run Code in Parallel Using the Multiprocessing Module</td>\n",
        "      <td>September 21, 2019</td>\n",
        "      <td>In this Python Programming video, we will be learning how to run code in parallel using the multiprocessing module. We will also look at how to process multiple high-resolution images at the same time using a ProcessPoolExecutor from the concurrent.futures module. Let’s get started…</td>\n",
-       "      <td>https://www.youtube.com/embed/fKl2JW_qrso?version=3&amp;rel=1&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;fs=1&amp;hl=en-US&amp;autohide=2&amp;wmode=transparent</td>\n",
+       "      <td>https://www.youtube.com/embed/fKl2JW_qrso</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Python Threading Tutorial: Run Code Concurrently Using the Threading Module</td>\n",
        "      <td>September 12, 2019</td>\n",
        "      <td>In this Python Programming video, we will be learning how to run threads concurrently using the threading module. We will also look at how to download multiple high-resolution images online using a ThreadPoolExecutor from the concurrent.futures module. Let’s get started…</td>\n",
-       "      <td>https://www.youtube.com/embed/IEEhzQoKtQU?version=3&amp;rel=1&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;fs=1&amp;hl=en-US&amp;autohide=2&amp;wmode=transparent</td>\n",
+       "      <td>https://www.youtube.com/embed/IEEhzQoKtQU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -174,12 +172,12 @@
        "3                                                                                                                                                                                                                                                                                                                                                   In this Python Programming video, we will be learning how to run threads concurrently using the threading module. We will also look at how to download multiple high-resolution images online using a ThreadPoolExecutor from the concurrent.futures module. Let’s get started…   \n",
        "4  Hey everyone. I wanted to give you an update on my videos. I will be releasing videos on threading and multiprocessing within the next week. Thanks so much for your patience. I currently have a temporary recording studio setup at my Airbnb that will allow me to record and edit the threading/multiprocessing videos. I am going to be moving into my new house in 10 days and once I have my recording studio setup then you can expect much faster video releases. I really appreciate how patient everyone has been while I go through this move, especially those of you who are contributing monthly through YouTube    \n",
        "\n",
-       "                                                                                                                                     youtube_url  \n",
-       "0  https://www.youtube.com/embed/z0gguhEmWiY?version=3&rel=1&showsearch=0&showinfo=1&iv_load_policy=1&fs=1&hl=en-US&autohide=2&wmode=transparent  \n",
-       "1  https://www.youtube.com/embed/_P7X8tMplsw?version=3&rel=1&showsearch=0&showinfo=1&iv_load_policy=1&fs=1&hl=en-US&autohide=2&wmode=transparent  \n",
-       "2  https://www.youtube.com/embed/fKl2JW_qrso?version=3&rel=1&showsearch=0&showinfo=1&iv_load_policy=1&fs=1&hl=en-US&autohide=2&wmode=transparent  \n",
-       "3  https://www.youtube.com/embed/IEEhzQoKtQU?version=3&rel=1&showsearch=0&showinfo=1&iv_load_policy=1&fs=1&hl=en-US&autohide=2&wmode=transparent  \n",
-       "4                                                                                                                                           None  "
+       "                                 youtube_url  \n",
+       "0  https://www.youtube.com/embed/z0gguhEmWiY  \n",
+       "1  https://www.youtube.com/embed/_P7X8tMplsw  \n",
+       "2  https://www.youtube.com/embed/fKl2JW_qrso  \n",
+       "3  https://www.youtube.com/embed/IEEhzQoKtQU  \n",
+       "4                                       None  "
       ]
      },
      "execution_count": 6,
@@ -205,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"new.csv\", index=False)"
+    "df.to_csv(\"miniProject.csv\", index=False)"
    ]
   }
  ],
